Fixed center alignment of code inside a figure

--- a/styles/madoko.css
+++ b/styles/madoko.css
@@ -101,6 +101,10 @@ a.localref:hover {
   text-align: center !important;
 }
 
+.align-center pre {
+  text-align: left;
+}
+
 .align-center>* {
   margin-left: auto !important;
   margin-right: auto !important;
